--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "feather-icons-react": "^0.4.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.2",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.14",
     "react-router-dom": "^5.2.0",
@@ -17,6 +18,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
