--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.Goals.txt
 
 # testing
 /coverage
@@ -18,7 +19,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-Goals.txt
 
 npm-debug.log*
 yarn-debug.log*
