--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.14",
     "react-router-dom": "^5.2.0",
