--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-elastic-carousel": "^0.11.2",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.12.1",
+    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.14",
     "react-router-dom": "^5.2.0",
