--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
+    "react-ga": "^3.3.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.12.1",
     "react-notifications-component": "^3.1.0",
