google analytics fix

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_API_KEY = "9505e654d2cb6876923c2ad9991a9fe0"
 REACT_APP_HOST = "smtp.gmail.com"
 REACT_APP_USERNAME = "t3stsender@gmail.com"
 REACT_APP_PASSWORD = "nniprxlwdyfvhkic"
-REACT_APP_GA_TRACKING_CODE = "G-QVBSX2VGWH"
+REACT_APP_GA_TRACKING_CODE = G-QVBSX2VGWH
